# tauri-rename-pdf-xml

./: package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  _layout.tsx  main.tsx
src-tauri/: 2  Cargo.toml  node.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: generator.rs  lib.rs  main.rs
src/components/home/: DialogCreateFolder.tsx
src/components/rename-pdf/: DialogSucess.tsx  checkbox.tsx
src/components/sidebar/: Sidebar.tsx
src/pages/: Dashboard.tsx  Home.tsx  NotFound.tsx  RenamePdf.tsx  Tagdps.tsx
